--- a/Posts/Posts/Scenes/Home/Cell/HomeCell.xib
+++ b/Posts/Posts/Scenes/Home/Cell/HomeCell.xib
@@ -12,23 +12,23 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="HomeCell" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" id="OvK-ET-Ucm" customClass="HomeCell" customModule="Posts" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="64"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="OvK-ET-Ucm" id="XJm-1l-Dfl">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="59.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="63.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jaZ-8j-Udc">
-                        <rect key="frame" x="22" y="0.0" width="370" height="59.5"/>
+                        <rect key="frame" x="22" y="2" width="370" height="59.5"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uWS-ID-Jlw">
-                                <rect key="frame" x="74" y="16" width="273" height="27"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uWS-ID-Jlw">
+                                <rect key="frame" x="74" y="18.5" width="273" height="21.5"/>
                                 <fontDescription key="fontDescription" name="EuphemiaUCAS" family="Euphemia UCAS" pointSize="16"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="post" translatesAutoresizingMaskIntoConstraints="NO" id="FMk-Mm-rW9">
-                                <rect key="frame" x="24" y="12" width="35" height="35"/>
+                                <rect key="frame" x="24" y="12.5" width="35" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="35" id="76P-sM-EI8"/>
                                     <constraint firstAttribute="height" constant="35" id="y56-NW-7vh"/>
@@ -38,11 +38,10 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="uWS-ID-Jlw" secondAttribute="trailing" constant="23" id="BfN-Ho-Sg0"/>
-                            <constraint firstItem="uWS-ID-Jlw" firstAttribute="top" secondItem="jaZ-8j-Udc" secondAttribute="top" constant="16" id="FCq-fd-si2"/>
+                            <constraint firstItem="uWS-ID-Jlw" firstAttribute="top" secondItem="jaZ-8j-Udc" secondAttribute="top" constant="18.5" id="EQh-Hg-BV2"/>
                             <constraint firstItem="FMk-Mm-rW9" firstAttribute="leading" secondItem="jaZ-8j-Udc" secondAttribute="leading" constant="24" id="PMJ-w8-CUo"/>
-                            <constraint firstAttribute="bottom" secondItem="FMk-Mm-rW9" secondAttribute="bottom" constant="12.5" id="XE0-Wy-oGR"/>
-                            <constraint firstAttribute="bottom" secondItem="uWS-ID-Jlw" secondAttribute="bottom" constant="16.5" id="hAF-Eb-DYF"/>
-                            <constraint firstItem="FMk-Mm-rW9" firstAttribute="top" secondItem="jaZ-8j-Udc" secondAttribute="top" constant="12" id="iep-QD-GhX"/>
+                            <constraint firstAttribute="bottom" secondItem="uWS-ID-Jlw" secondAttribute="bottom" constant="19.5" id="dga-Yd-tC1"/>
+                            <constraint firstItem="FMk-Mm-rW9" firstAttribute="centerY" secondItem="jaZ-8j-Udc" secondAttribute="centerY" id="fsk-gL-8Ax"/>
                             <constraint firstItem="uWS-ID-Jlw" firstAttribute="leading" secondItem="FMk-Mm-rW9" secondAttribute="trailing" constant="15" id="xZa-tf-lK3"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
@@ -59,10 +58,10 @@
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="jaZ-8j-Udc" firstAttribute="top" secondItem="XJm-1l-Dfl" secondAttribute="top" id="6gA-do-Rrx"/>
                     <constraint firstItem="jaZ-8j-Udc" firstAttribute="leading" secondItem="XJm-1l-Dfl" secondAttribute="leading" constant="22" id="Gjh-3R-xLF"/>
+                    <constraint firstAttribute="bottom" secondItem="jaZ-8j-Udc" secondAttribute="bottom" constant="2" id="S5a-0b-EIT"/>
                     <constraint firstAttribute="trailing" secondItem="jaZ-8j-Udc" secondAttribute="trailing" constant="22" id="a8j-xc-AIZ"/>
-                    <constraint firstAttribute="bottom" secondItem="jaZ-8j-Udc" secondAttribute="bottom" id="e0S-3K-Caj"/>
+                    <constraint firstItem="jaZ-8j-Udc" firstAttribute="top" secondItem="XJm-1l-Dfl" secondAttribute="top" constant="2" id="eXG-QV-8c6"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
